Add postcard card to maum-hub integration site

--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@
             --card-color: #8b5cf6;
         }
 
+        .card.postcard-card {
+            --card-color: #e91e63;
+        }
+
         .card-icon {
             width: 80px;
             height: 80px;
@@ -279,6 +283,16 @@
                 <h3>정서 4분면 마음 편지</h3>
                 <p>감정의 에너지와 방향을 4분면으로 분석하고, 나에게 따뜻한 마음 편지를 써보는 활동입니다. 과학적 접근으로 감정을 이해해보세요.</p>
                 <a href="https://plusiam.github.io/maum-letter/" target="_blank" class="card-button">
+                    💻 활동지 바로가기
+                </a>
+            </div>
+
+            <div class="card postcard-card">
+                <div class="card-icon">💝</div>
+                <span class="card-tag">마음 전달</span>
+                <h3>계절 테마 마음편지</h3>
+                <p>계절의 아름다움과 함께 소중한 사람에게 마음을 전하는 편지를 작성해보세요. 4계절 애니메이션과 함께하는 감정 표현 활동입니다.</p>
+                <a href="https://plusiam.github.io/my-family-postcard/" target="_blank" class="card-button">
                     💻 활동지 바로가기
                 </a>
             </div>
