Add invisible-child-worksheet to emotional learning hub

--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
             --card-color: #e91e63;
         }
 
+        .card.invisible-child-card {
+            --card-color: #ff8a65;
+        }
+
         .card-icon {
             width: 80px;
             height: 80px;
@@ -273,6 +277,16 @@
                 <h3>쑥쑥! 마음 성장 노트</h3>
                 <p>속상했던 일을 되돌아보며 생각과 감정의 연결고리를 찾아보는 성찰 활동입니다. ABC 모델을 통해 건강한 사고 패턴을 기를 수 있어요.</p>
                 <a href="https://plusiam.github.io/heart-growth/" target="_blank" class="card-button">
+                    💻 활동지 바로가기
+                </a>
+            </div>
+
+            <div class="card invisible-child-card">
+                <div class="card-icon">🌟</div>
+                <span class="card-tag">공감 능력</span>
+                <h3>나도 멋진 친구! 색깔 찾기 작전</h3>
+                <p>그림책 '보이지 않는 아이'를 통해 친구의 숨겨진 좋은 점을 발견하고, 격려하는 마법 주문을 만들어보는 활동입니다. 공감과 배려를 배워보세요.</p>
+                <a href="https://plusiam.github.io/invisible-child-worksheet/" target="_blank" class="card-button">
                     💻 활동지 바로가기
                 </a>
             </div>
