Add 'Happy Family Moments' activity to the hub
- Added new card for family bonding activity
- Integrated 'Our Family, Drawing Happy Moments' worksheet
- Added family-moments-card styling with coral theme color
- Positioned strategically after growth activities for better user flow

--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@
             --card-color: #ff8a65;
         }
 
+        .card.family-moments-card {
+            --card-color: #ff7f50;
+        }
+
         .card-icon {
             width: 80px;
             height: 80px;
@@ -277,6 +281,16 @@
                 <h3>쑥쑥! 마음 성장 노트</h3>
                 <p>속상했던 일을 되돌아보며 생각과 감정의 연결고리를 찾아보는 성찰 활동입니다. ABC 모델을 통해 건강한 사고 패턴을 기를 수 있어요.</p>
                 <a href="https://plusiam.github.io/heart-growth/" target="_blank" class="card-button">
+                    💻 활동지 바로가기
+                </a>
+            </div>
+
+            <div class="card family-moments-card">
+                <div class="card-icon">👨‍👩‍👧‍👦</div>
+                <span class="card-tag">가족 유대</span>
+                <h3>우리 가족, 행복한 순간 그리기</h3>
+                <p>가족과의 소중한 경험을 떠올려 글과 그림으로 표현해보는 활동입니다. 가족 구성원에 대한 감사와 사랑을 나누며 가족 유대감을 강화해보세요.</p>
+                <a href="https://plusiam.github.io/happy-family-moments/" target="_blank" class="card-button">
                     💻 활동지 바로가기
                 </a>
             </div>
