🎉 프리미엄 긍정 카드 메이커 통합 완료
메인 허브에 새로운 도구 추가:
- 💌 프리미엄 긍정 카드 메이커 (NEW!)
- 보라색 테마와 함께 상단에 배치
- 기존 디자인과 완벽 조화
- positive-card-maker/ 경로로 접근 가능

주요 특징:
✨ 6가지 아름다운 템플릿
🖼️ 이미지 업로드 기능
🎲 룰렛 메시지 추천
🖥️ 실시간 Canvas 미리보기
💾 PNG 이미지 다운로드

--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@
             --card-color: #ff1744;
         }
 
+        .card.positive-card-maker {
+            --card-color: #9333ea;
+        }
+
         .card-icon {
             width: 80px;
             height: 80px;
@@ -294,6 +298,16 @@
         </div>
 
         <div class="cards-grid">
+            <div class="card positive-card-maker new">
+                <div class="card-icon">💌</div>
+                <span class="card-tag">긍정 메시지</span>
+                <h3>프리미엄 긍정 카드 메이커</h3>
+                <p>6가지 아름다운 템플릿과 이미지 업로드 기능으로 나만의 특별한 긍정 카드를 만들어보세요. 룰렛을 통한 메시지 추천과 실시간 미리보기로 완성도 높은 카드를 제작할 수 있어요.</p>
+                <a href="positive-card-maker/" target="_blank" class="card-button">
+                    💻 활동지 바로가기
+                </a>
+            </div>
+
             <div class="card mind-card">
                 <div class="card-icon">🎯</div>
                 <span class="card-tag">개인 성찰</span>
@@ -314,7 +328,7 @@
                 </a>
             </div>
 
-            <div class="card family-love-coupon-card new">
+            <div class="card family-love-coupon-card">
                 <div class="card-icon">🏷️</div>
                 <span class="card-tag">가족 사랑</span>
                 <h3>가족 사랑 쿠폰 만들기</h3>
